# support_bot

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  run.sh
.dev/db/docker-entrypoint-initdb.d/: init-pgvector-db.sh  init-pgvector-db.sql
alembic/versions/: a2ed3106f210_init.py  b1d6927d0c3b_init.py
app/: container.py  main.py  run.py  settings.py  utils.py
app/adapters/: __init__.py
app/adapters/milvus/: __init__.py  unit_of_work.py
app/adapters/milvus/collections/: __init__.py  base_collection.py  support_chats_collection.py
app/adapters/orm/: __init__.py  tables.py
app/adapters/repo/: __init__.py  ticket_message_repository.py
app/adapters/views/: __init__.py  base_database_view.py  ticket_message_view.py  ticket_messages_view.py
app/cli/: milvus__create_data.py  milvus__query.py
app/domain/: errors.py
app/domain/commands/: __init__.py  command.py  ticket_message_commands.py
app/domain/models/: __init__.py  entity.py  ticket_message.py
app/domain/models/milvus/: __init__.py  collection_item.py
app/rest_api/: __init__.py  api_response.py  erorrs.py
app/rest_api/support/: __init__.py  endpoints.py  models.py
app/service_layer/: message_bus.py  repositories.py  unit_of_work.py
app/service_layer/handlers/: mapping.py
app/service_layer/handlers/command_handlers/: __init__.py
app/service_layer/handlers/event_handlers/: __init__.py
app/service_layer/milvus/: __init__.py  abstract_collection.py  collections.py  unit_of_work.py
dapr/: __init__.py
