[project]
name = "support-bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vlad Boiko", email = "vboiko@shakuro.com"},
]
dependencies = [
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "dependency-injector>=4.43.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "pgvector>=0.3.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "openai>=1.52.2",
    "scikit-learn>=1.5.2",
    "pika>=1.3.2",
    "tenacity>=9.0.0",
    "psycopg2-binary>=2.9.10",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
